@@ -4,6 +4,7 @@
 
 -テザインモジュール一覧のページをアップデート。
 -【plugin】WebPushの既知サーバに Edge のPushサーバを追加。
+-【fix/plugin】WebPushの「新着記事で送信しない」設定が動作していない。
 
 
 *Ver3.13 : 2017/08/22
